--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/dstate/slack-wheretoeat#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.3"
   }
 }
